P4ADEV-3181 - AssessmentsRegistry - split parameters for controller